fixed spacing and color on stats icon

--- a/projects/parodle/styles/StatsPopup.module.css
+++ b/projects/parodle/styles/StatsPopup.module.css
@@ -52,3 +52,10 @@
 .length {
     color: var(--color-quiet);
 }
+
+.popover {
+    padding: 0;
+    color: var(--color-dark);
+    display: flex;
+    align-items: center;
+}
